--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 <body>
   <div class="container-fluid bg-dark sticky-top">
     <div class="row justify-content-between pt-2 ps-4 pb-2">
-      <div class="col-3"><img src="clip.png" style="width:100px"></div>
+      <div class="col-3"><img src="./clip.png" style="width:100px"></div>
       <div class="col-7 pt-2">
         <h1>INTRAVEL</h1>
       </div>
